# middleware/validate.js
@@ -28,7 +28,31 @@ const saveBook = (req, res, next) => {
     });
 };
 
+const saveAuthor = (req, res, next) => {
+    const validationRule = {
+        authorName: 'required|string',
+        birthday: 'required|string',
+        hometown: 'required|string',
+        booksWritten: 'required|numeric',
+        networth: 'required|string',
+        children: 'required|numeric'
+    };
+    validator(req.body, validationRule, {}, (err, status) => {
+        if (!status) {
+            res.status(412).send({
+                success: false,
+                message: 'Validation failed',
+                data: err
+            });
+            return;
+        } else {
+            next();
+        }
+    });
+};
+
 module.exports = {
-    saveBook
+    saveBook, 
+    saveAuthor
 };
 
